--- a/TaiyouConfig/TaiyouConfig.vcxproj
+++ b/TaiyouConfig/TaiyouConfig.vcxproj
@@ -132,19 +132,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\KeysStore.cpp" />
-    <ClCompile Include="src\Token\BlockDeclaration.cpp" />
+    <ClCompile Include="src\Linker\Link.cpp" />
+    <ClCompile Include="src\Token\NamespaceDeclaration.cpp" />
     <ClCompile Include="src\Token\UnparsedKey.cpp" />
     <ClCompile Include="src\Utils.cpp" />
-    <ClCompile Include="src\TcfgUnit.cpp" />
-    <ClCompile Include="src\Linker\UnmanagedNamespace.cpp" />
+    <ClCompile Include="src\Linker\UncompiledNamespace.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\KeysStore.hpp" />
-    <ClInclude Include="src\Token\BlockDeclaration.hpp" />
+    <ClInclude Include="src\Linker\Link.hpp" />
+    <ClInclude Include="src\Token\NamespaceDeclaration.hpp" />
     <ClInclude Include="src\Token\UnparsedKey.hpp" />
     <ClInclude Include="src\Utils.hpp" />
     <ClInclude Include="src\TcfgUnit.hpp" />
-    <ClInclude Include="src\Linker\UnmanagedNamespace.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
