--- a/TaiyouConfig/TaiyouConfig.vcxproj.filters
+++ b/TaiyouConfig/TaiyouConfig.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\Linker\Link.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Program.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Utils.hpp">
@@ -50,5 +53,9 @@
     <ClInclude Include="src\Linker\LinkedTcfgUnit.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="mainconfig.tcfg" />
+    <CopyFileToFolders Include="ceira.tcfg" />
   </ItemGroup>
 </Project>
